--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="home">
            <nav>
                <div id="logo">
-                   <img src="/img/image 9.png" alt="logo" />
+                   <img src="img/image 9.png" alt="logo" />
                </div>
                <div id="pages">
                    <ul>
@@ -53,9 +53,9 @@
                   </ul>
             </div>
             <div id="tradeImg">
-                <img src="/img/Rectangle 30.png">
+                <img src="img/Rectangle 30.png">
                 <div id="innerImg">
-                    <img src="/img/Frame 7.png" alt="yellow img" />
+                    <img src="img/Frame 7.png" alt="yellow img" />
                 </div>
             </div>
         </section>
@@ -73,7 +73,7 @@
             </div>
             <div class="powerContent">
                 <div class="content">
-                    <img src="/img/solar-panels-meadow 2.png" alt="solarPanel"/>
+                    <img src="img/solar-panels-meadow 2.png" alt="solarPanel"/>
                     <div style="padding:15px;">
                     <h5 style="margin-bottom:15px;">Off Grid</h5>
                     <p style="margin-bottom:15px;" >WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="/img/solar-panels-meadow 2 (1).png" alt="solarPanel"/>
+                    <img src="img/solar-panels-meadow 2 (1).png" alt="solarPanel"/>
                     <div style="padding:15px;">
                     <h5 style="margin-bottom:15px;">On Grid</h5>
                     <p style="margin-bottom:15px;">WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="/img/solar-panels-meadow 2 (2).png" alt="solarPanel"/>
+                    <img src="img/solar-panels-meadow 2 (2).png" alt="solarPanel"/>
                     <div style="padding:15px;">
                     <h5 style="margin-bottom:15px;">Hybrid</h5>
                     <p style="margin-bottom:15px;">WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
@@ -113,14 +113,14 @@
         <section class="energy">
             
             <aside>
-                <img src="/img/Icon.png" alt="icon"/>
+                <img src="img/Icon.png" alt="icon"/>
                 <h2 class="headers">Energy Innovators - the products we love</h2>
                 <p>Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse tempor et ipsum sit egestas nunc. Diam in cum a in.</p>
             </aside>
             <div class="content">
                <div class="energyContent">
                    <div class="layer">
-                <img src="/img/image 9.png" alt="logo" />
+                <img src="img/image 9.png" alt="logo" />
                 <h5>SoliTek - The European Manufacturer of Solar Panels</h5>
                 <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
                 <a href="#">View integration <i class="fa-solid fa-arrow-right" style="background-color: transparent;"> </i></a>
@@ -128,7 +128,7 @@
                </div>
                <div class="energyContent">
                 <div class="layer">
-             <img src="/img/image 9.png" alt="logo" />
+             <img src="img/image 9.png" alt="logo" />
              <h5>SoliTek - The European Manufacturer of Solar Panels</h5>
              <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
              <a href="#">View integration <i class="fa-solid fa-arrow-right" style="background-color: transparent;"> </i></a>
@@ -136,7 +136,7 @@
             </div>
             <div class="energyContent">
                 <div class="layer">
-             <img src="/img/image 9.png" alt="logo" />
+             <img src="img/image 9.png" alt="logo" />
              <h5>SoliTek - The European Manufacturer of Solar Panels</h5>
              <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
              <a href="#">View integration <i class="fa-solid fa-arrow-right" style="background-color: transparent;"> </i></a>
@@ -144,7 +144,7 @@
             </div>
             <div class="energyContent">
                 <div class="layer">
-             <img src="/img/image 9.png" alt="logo" />
+             <img src="img/image 9.png" alt="logo" />
              <h5>SoliTek - The European Manufacturer of Solar Panels</h5>
              <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
              <a href="#">View integration <i class="fa-solid fa-arrow-right" style="background-color: transparent;"> </i></a>
@@ -161,17 +161,17 @@
             <p>More than 3000 users have been helped by World Online Course.</p>
             <div class="valuesContent">
                 <div class="content">
-                    <img src="/img/Customer Loyalty.png" alt=""/>
+                    <img src="img/Customer Loyalty.png" alt=""/>
                     <h4>Customer Care</h4>
                     <p>We're here to help you with solar panel installation in Devon and Cornwall. If we were to sum ourselves up in a few words, those would be "reliable, honest and friendly." We find our customers agree! We're with you from the start of the project to the finish.</p>
                 </div>
                 <div class="content">
-                    <img src="/img/Price Tag.png" alt=""/>
+                    <img src="img/Price Tag.png" alt=""/>
                     <h4>Price</h4>
                     <p>As I'm sure you'll have seen, solar systems don't tend to come cheap. Our aim is to make solar power accessible to everyone, so we price ourselves in a way that makes solar energy more affordable. We're focused on helping you and on helping the environment, rather than on turning a profit.</p>
                 </div>
                 <div class="content">
-                    <img src="/img/Environment.png" alt=""/>
+                    <img src="img/Environment.png" alt=""/>
                     <h4>Sustainability</h4>
                     As we've said, we do this because we truly care about the planet and about seeing people embrace a greener, more eco-friendly approach to power. The world of green energy can be jargon-filled and opaque, so we want to help educate people on the big and little things they can do to protect our planet!<p></p>                
 </div>
@@ -179,7 +179,7 @@
         </div>
         <div class="users">
             <div class="content">
-                <img src="/img//“.png" alt="decoration">
+                <img src="img//“.png" alt="decoration">
                 <h2 class="headers">what they say about WOC</h2>
                 <p>More than 3000 users have been helped by World Online Course.</p>
             </div>
@@ -191,15 +191,15 @@
                <div class="caData">
     
                   <div class="data">
-                    <img src="/img/EDITED-27 - Copy 1.png" alt="person" style="margin-right:10px;"/>
+                    <img src="img/EDITED-27 - Copy 1.png" alt="person" style="margin-right:10px;"/>
                     <div>
                         <h5>Resky Fernanda</h5>
                         <p>Product Designer at Tokopedia</p>
                     </div>
                   </div>
                   <div class="btnss">
-                      <img src="/img/Group 17.png" alt="left Arrow"/>
-                      <img src="/img//Group 18.png" alt="right Arrow"/>
+                      <img src="img/Group 17.png" alt="left Arrow"/>
+                      <img src="img//Group 18.png" alt="right Arrow"/>
                   </div>
             </div>
             </div>
@@ -208,7 +208,7 @@
     <div class="footer"> 
     <div class="footer1">
       <div class="footerImg">
-          <img src="/img/image 9.png" />
+          <img src="img/image 9.png" />
       </div>
       <div class="footerContent1">
           <ul>
